Fix alignment of main and body

--- a/pricing-component-with-toggle/styles/stylesheet.css
+++ b/pricing-component-with-toggle/styles/stylesheet.css
@@ -26,10 +26,16 @@ body {
   font-size: 1rem;
   font-family: "Montserrat", sans-serif;
   display: flex;
-  justify-content: center;
+  align-items: center;
   color: var(--grayish-blue);
+  overflow-x: hidden;
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 body::before,
 body::after {
   position: absolute;
